syntax = "proto3";

package keyauth.verifycode;
option go_package = "github.com/infraboard/keyauth/pkg/verifycode";

import "pkg/verifycode/pb/request.proto";
import "pkg/verifycode/pb/verifycode.proto";

// VerifyCodeService 验证码服务
service VerifyCodeService {
	rpc IssueCode(IssueCodeRequest) returns(IssueCodeResponse);
	rpc CheckCode(CheckCodeRequest) returns(Code);
}